--- a/themes/classic/startupapi.css
+++ b/themes/classic/startupapi.css
@@ -1,3 +1,4 @@
+/* from header.php */
 #userbase_body {
 	color: #666666;
 	font-family: georgia, garamond, serif;
@@ -77,4 +78,990 @@
 
 #userbase_adminmenu a:hover {
 	color: #69818d;
+}
+
+/* from login.php */
+.userbase-errorbox {
+	background: #f7dfb9;
+	font: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+	padding: 0.4em 1em;
+	margin: 1em 0;
+	width: 475px;
+	border: 4px solid #f77;
+	border-radius: 7px;
+	-moz-border-radius: 7px;
+	-webkit-border-radius: 7px;
+	font-size: 1.2em;
+	color: #500;
+	font-weight: bold;
+}
+
+#userbase-authlist {
+	font: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+	padding: 0 1em;
+	margin: 0 auto;
+	width: 480px;
+}
+
+#userbase-authlist h2 {
+	font-weight: bold;
+	font-size: 2.5em;
+}
+#userbase-authlist h3 {
+	font-weight: bold;
+	font-size: 1.5em;
+}
+
+/* from register.php */
+.userbase-errorbox {
+	background: #f7dfb9;
+	font: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+	padding: 0.4em 1em;
+	margin: 1em 0;
+	width: 465px;
+	border: 4px solid #f77;
+	border-radius: 7px;
+	-moz-border-radius: 7px;
+	-webkit-border-radius: 7px;
+	font-size: 1.2em;
+	color: #500;
+	font-weight: bold;
+}
+
+.userbase-errorbox ul {
+	margin: 0;
+	padding-left: 1em;
+}
+
+#userbase-authlist {
+	font: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+	padding: 0 1em;
+	margin: 0 auto;
+	width: 480px;
+}
+
+#userbase-authlist h2 {
+	font-weight: bold;
+	font-size: 2.5em;
+}
+#userbase-authlist h3 {
+	font-weight: bold;
+	font-size: 1.5em;
+}
+
+/* from register.php - inivitation form */
+#userbase-invitation-form {
+	font: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+	padding: 0.4em 1em;
+	margin: 0;
+	width: 382px;
+	border: 4px solid #ccc;
+	border-radius: 7px;
+	-moz-border-radius: 7px;
+	-webkit-border-radius: 7px;
+}
+
+#userbase-invitation-form p {
+	font-size: 1.2em;
+	line-height: 1.5;
+
+	clear: both;
+	margin: 0 0 .75em;
+	padding: 0;
+}
+
+#userbase-invitation-form fieldset {
+	border: 0;
+	padding: 0;
+	margin: 0;
+}
+
+#userbase-invitation-form legend {
+	border: 0;
+	padding: 0;
+	margin: 0;
+	font-size: 1.8em;
+	line-height: 1.8;
+	padding-bottom: .6em;
+}
+
+#userbase-invitation-button {
+	padding: 0.3em 25px;
+	cursor: pointer;
+}
+
+#userbase-invitation-form input {
+	background: #f6f6f6;
+	border: 2px solid #888;
+	border-radius: 2px;
+	-moz-border-radius: 2px;
+	-webkit-border-radius: 2px;
+	padding: 4px;
+}
+
+#userbase-invitation-form input:focus {
+	background: #fff;
+}
+
+#userbase-invitation-form abbr {
+	cursor: help;
+	font-style: normal;
+	border: 0;
+	color: red;
+	font-size: 1.2em;
+	font-weight: bold;
+}
+
+#userbase-invite-code {
+	width: 290px;
+}
+
+/* from edit.php */
+#userbase-edit-info {
+	font: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+	background: white;
+	padding: 0 1em;
+	margin: 0;
+}
+
+#userbase-edit-info h2 {
+	font-weight: bold;
+	font-size: 2.5em;
+}
+
+#userbase-edit-info h3 {
+	font-weight: bold;
+	font-size: 1.5em;
+}
+
+.userbase-errorbox {
+	background: #f7dfb9;
+	padding: 0.4em 1em;
+	margin: 1em 0;
+	width: 515px;
+	border: 4px solid #f77;
+	border-radius: 7px;
+	-moz-border-radius: 7px;
+	-webkit-border-radius: 7px;
+	font-size: 1.2em;
+	color: #500;
+	font-weight: bold;
+}
+
+/* from modules/usernamepass/forgotpassword.php */
+#userbase-forgotpassword {
+	font: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+	padding: 0 1em;
+	margin: 0 auto;
+	width: 400px;
+}
+
+#userbase-forgotpassword h2 {
+	font-weight: bold;
+	font-size: 2.5em;
+}
+
+#userbase-forgotpassword h3 {
+	font-weight: bold;
+	font-size: 1.5em;
+}
+
+#userbase-passwordsent {
+	padding: 0 1em;
+	margin: 2em 0;
+	width: 350px;
+	border: 4px solid #ccc;
+	border-radius: 7px;
+	-moz-border-radius: 7px;
+	-webkit-border-radius: 7px;
+}
+
+#userbase-forgotpassword-form {
+	padding: 0.4em 1em;
+	margin: 0;
+	width: 350px;
+	border: 4px solid #ccc;
+	border-radius: 7px;
+	-moz-border-radius: 7px;
+	-webkit-border-radius: 7px;
+}
+
+#userbase-forgotpassword-form input {
+	background: #f6f6f6;
+	border: 2px solid #888;
+	border-radius: 2px;
+	-moz-border-radius: 2px;
+	-webkit-border-radius: 2px;
+	padding: 4px;
+}
+#userbase-forgotpassword-button {
+	padding: 0.3em 10px;
+	cursor: pointer;
+}
+#userbase-forgotpassword fieldset {
+	border: 0;
+	padding: 0;
+	margin: 0;
+}
+
+#userbase-forgotpassword legend {
+	border: 0;
+	padding: 0;
+	margin: 0;
+	font-size: 1.5em;
+	line-height: 1.8;
+	padding-bottom: .6em;
+}
+
+/* from modules/usernamepass/index.php login form */
+#userbase-usernamepass-login-form {
+	font: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+	padding: 0.4em 1em;
+	margin: 0;
+	width: 480px;
+	border: 4px solid #ccc;
+	border-radius: 7px;
+	-moz-border-radius: 7px;
+	-webkit-border-radius: 7px;
+}
+
+#userbase-usernamepass-login-form li {
+	font-size: 1.2em;
+	line-height: 1.5;
+
+	clear: both;
+	margin: 0 0 .75em;
+	padding: 0;
+}
+
+#userbase-usernamepass-login-form fieldset {
+	border: 0;
+	padding: 0;
+	margin: 0;
+}
+
+#userbase-usernamepass-login-form legend {
+	border: 0;
+	padding: 0;
+	margin: 0;
+	font-size: 1.8em;
+	line-height: 1.8;
+	padding-bottom: .6em;
+}
+
+#userbase-usernamepass-login-form ul {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+}
+
+#userbase-usernamepass-login-form label {
+	display: block;
+	float: left;
+	line-height: 1.6;
+	margin-right: 10px;
+	text-align: right;
+	width: 110px;
+	padding: 3px 0;
+}
+
+#userbase-usernamepass-login-form label:after {
+	content: ':';
+}
+
+#userbase-usernamepass-login-button {
+	margin-left: 125px;
+	padding: 0.3em 25px;
+	cursor: pointer;
+}
+
+#userbase-usernamepass-login-forgotpass {
+	margin-left: 130px;
+	cursor: pointer;
+	font-size: 0.6em;
+	display: block;
+}
+
+#userbase-usernamepass-login-form input {
+	background: #f6f6f6;
+	border: 2px solid #888;
+	border-radius: 2px;
+	-moz-border-radius: 2px;
+	-webkit-border-radius: 2px;
+	padding: 4px;
+}
+
+#userbase-usernamepass-login-form input:focus {
+	background: #fff;
+}
+
+#userbase-usernamepass-login-form .remember label {
+	display: block;
+	float: none;
+	margin-left: 127px;
+	text-align: left;
+	width: 270px;
+}
+
+#userbase-usernamepass-login-form .remember input {
+	border: 0;
+	background: #fff;
+}
+
+#userbase-usernamepass-login-form .remember {
+	margin-bottom: 0;
+}
+
+#userbase-usernamepass-login-form .remember label:after {
+	content: ''
+}
+
+/* from modules/usernamepass/index.php registration form */
+#userbase-usernamepass-register-form {
+	font: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+	padding: 0.4em 1em;
+	margin: 0;
+	width: 470px;
+	border: 4px solid #ccc;
+	border-radius: 7px;
+	-moz-border-radius: 7px;
+	-webkit-border-radius: 7px;
+}
+
+#userbase-usernamepass-register-form li {
+	font-size: 1.2em;
+	line-height: 1.5;
+
+	clear: both;
+	margin: 0 0 .75em;
+	padding: 0;
+}
+
+#userbase-usernamepass-register-form fieldset {
+	border: 0;
+	padding: 0;
+	margin: 0;
+}
+
+#userbase-usernamepass-register-form legend {
+	border: 0;
+	padding: 0;
+	margin: 0;
+	font-size: 1.8em;
+	line-height: 1.8;
+	padding-bottom: .6em;
+}
+
+#userbase-usernamepass-register-form ul {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+}
+
+#userbase-usernamepass-register-form label {
+	display: block;
+	float: left;
+	line-height: 1.6;
+	margin-right: 10px;
+	text-align: right;
+	width: 140px;
+	padding: 3px 0;
+}
+
+#userbase-usernamepass-register-form label:after {
+	content: ':';
+}
+
+#userbase-usernamepass-register-button {
+	margin-left: 155px;
+	padding: 0.3em 25px;
+	cursor: pointer;
+}
+
+#userbase-usernamepass-register-forgotpass {
+	margin-left: 130px;
+	cursor: pointer;
+	font-size: 0.6em;
+	display: block;
+}
+
+#userbase-usernamepass-register-form input {
+	background: #f6f6f6;
+	border: 2px solid #888;
+	border-radius: 2px;
+	-moz-border-radius: 2px;
+	-webkit-border-radius: 2px;
+	padding: 4px;
+}
+
+#userbase-usernamepass-register-form input:focus {
+	background: #fff;
+}
+
+#userbase-usernamepass-register-form abbr {
+	cursor: help;
+	font-style: normal;
+	border: 0;
+	color: red;
+	font-size: 1.2em;
+	font-weight: bold;
+}
+
+/* from modules/usernamepass/index.php information editing form */
+#userbase-usernamepass-edit-form {
+	font: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+	padding: 0.4em 1em;
+	margin: 0;
+	width: 520px;
+	border: 4px solid #ccc;
+	border-radius: 7px;
+	-moz-border-radius: 7px;
+	-webkit-border-radius: 7px;
+}
+
+#userbase-usernamepass-edit-form li {
+	font-size: 1.2em;
+	line-height: 1.5;
+
+	clear: both;
+	margin: 0 0 .75em;
+	padding: 0;
+}
+
+#userbase-usernamepass-edit-form fieldset {
+	border: 0;
+	padding: 0;
+	margin: 0;
+}
+
+#userbase-usernamepass-edit-form legend {
+	border: 0;
+	padding: 0;
+	margin: 0;
+	font-size: 1.8em;
+	line-height: 1.8;
+	padding-bottom: .6em;
+}
+
+#userbase-usernamepass-edit-form ul {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+}
+
+#userbase-usernamepass-edit-form label {
+	display: block;
+	float: left;
+	line-height: 1.6;
+	margin-right: 10px;
+	text-align: right;
+	width: 165px;
+	padding: 3px 0;
+}
+
+#userbase-usernamepass-edit-form label:after {
+	content: ':';
+}
+
+#userbase-usernamepass-edit-button {
+	margin-left: 180px;
+	padding: 0.3em 25px;
+	cursor: pointer;
+}
+
+#userbase-usernamepass-edit-forgotpass {
+	margin-left: 130px;
+	cursor: pointer;
+	font-size: 0.6em;
+	display: block;
+}
+
+#userbase-usernamepass-edit-form input {
+	background: #f6f6f6;
+	border: 2px solid #888;
+	border-radius: 2px;
+	-moz-border-radius: 2px;
+	-webkit-border-radius: 2px;
+	padding: 4px;
+}
+
+#userbase-usernamepass-edit-form input:focus {
+	background: #fff;
+}
+
+#userbase-usernamepass-edit-form abbr {
+	cursor: help;
+	font-style: normal;
+	border: 0;
+	color: red;
+	font-size: 1.2em;
+	font-weight: bold;
+}
+
+#userbase-usernamepass-edit-form .userbase-usernamepass-edit-section {
+	font-size: 1.5em;
+	font-weight: bold;
+	margin-top: 1em;
+}
+
+/* from modules/usernamepass/passwordreset.php */
+#userbase-passwordreset {
+	font: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+	padding: 0 1em;
+	margin: 0 auto;
+	width: 400px;
+}
+
+#userbase-passwordreset h2 {
+	font-weight: bold;
+	font-size: 2.5em;
+}
+
+#userbase-passwordreset h3 {
+	font-weight: bold;
+	font-size: 1.5em;
+}
+
+#userbase-passwordreset-form {
+	font: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+	padding: 0.4em 1em;
+	margin: 0;
+	width: 400px;
+	border: 4px solid #ccc;
+	border-radius: 7px;
+	-moz-border-radius: 7px;
+	-webkit-border-radius: 7px;
+}
+
+#userbase-passwordreset-form li {
+	font-size: 1.2em;
+	line-height: 1.5;
+
+	clear: both;
+	margin: 0 0 .75em;
+	padding: 0;
+}
+
+#userbase-passwordreset-form fieldset {
+	border: 0;
+	padding: 0;
+	margin: 0;
+}
+
+#userbase-passwordreset-form legend {
+	border: 0;
+	padding: 0;
+	margin: 0;
+	font-size: 1.8em;
+	line-height: 1.8;
+	padding-bottom: .6em;
+}
+
+#userbase-passwordreset-form ul {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+}
+
+#userbase-passwordreset-form label {
+	display: block;
+	float: left;
+	line-height: 1.6;
+	margin-right: 10px;
+	text-align: right;
+	width: 160px;
+	padding: 3px 0;
+}
+
+#userbase-passwordreset-form label:after {
+	content: ':';
+}
+
+#userbase-passwordreset-button {
+	margin-left: 170px;
+	padding: 0.3em 25px;
+	cursor: pointer;
+}
+
+#userbase-passwordreset-form input {
+	background: #f6f6f6;
+	border: 2px solid #888;
+	border-radius: 2px;
+	-moz-border-radius: 2px;
+	-webkit-border-radius: 2px;
+	padding: 4px;
+}
+
+#userbase-passwordreset-form input:focus {
+	background: #fff;
+}
+
+/* from modules/email/index.php login form */
+#userbase-email-login-form {
+	font: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+	padding: 0.4em 1em;
+	margin: 0;
+	width: 600px;
+	border: 4px solid #ccc;
+	border-radius: 7px;
+	-moz-border-radius: 7px;
+	-webkit-border-radius: 7px;
+}
+
+#userbase-email-login-form li {
+	font-size: 1.2em;
+	line-height: 1.5;
+
+	clear: both;
+	margin: 0 0 .75em;
+	padding: 0;
+}
+
+#userbase-email-login-form fieldset {
+	border: 0;
+	padding: 0;
+	margin: 0;
+}
+
+#userbase-email-login-form legend {
+	border: 0;
+	padding: 0;
+	margin: 0;
+	font-size: 1.8em;
+	line-height: 1.8;
+	padding-bottom: .6em;
+}
+
+#userbase-email-login-form ul {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+}
+
+#userbase-email-login-form label {
+	display: block;
+	float: left;
+	line-height: 1.6;
+	margin-right: 10px;
+	text-align: right;
+	width: 110px;
+	padding: 3px 0;
+}
+
+#userbase-email-login-form label:after {
+	content: ':';
+}
+
+#userbase-email-login-button {
+	margin-left: 125px;
+	padding: 0.3em 25px;
+	cursor: pointer;
+}
+
+#userbase-email-login-form input {
+	background: #f6f6f6;
+	border: 2px solid #888;
+	border-radius: 2px;
+	-moz-border-radius: 2px;
+	-webkit-border-radius: 2px;
+	padding: 4px;
+}
+
+#userbase-email-login-form input:focus {
+	background: #fff;
+}
+
+#userbase-email-login-form abbr {
+	color: #f74d3d;
+	font-weight: bold;
+	cursor: help;
+}
+
+/* from modules/email/index.php registration form */
+#userbase-email-signup-form {
+	font: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+	padding: 0.4em 1em;
+	margin: 0;
+	width: 600px;
+	border: 4px solid #ccc;
+	border-radius: 7px;
+	-moz-border-radius: 7px;
+	-webkit-border-radius: 7px;
+}
+
+#userbase-email-signup-form li {
+	font-size: 1.2em;
+	line-height: 1.5;
+
+	clear: both;
+	margin: 0 0 .75em;
+	padding: 0;
+}
+
+#userbase-email-signup-form fieldset {
+	border: 0;
+	padding: 0;
+	margin: 0;
+}
+
+#userbase-email-signup-form legend {
+	border: 0;
+	padding: 0;
+	margin: 0;
+	font-size: 1.8em;
+	line-height: 1.8;
+	padding-bottom: .6em;
+}
+
+#userbase-email-signup-form ul {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+}
+
+#userbase-email-signup-form label {
+	display: block;
+	float: left;
+	line-height: 1.6;
+	margin-right: 10px;
+	text-align: right;
+	width: 110px;
+	padding: 3px 0;
+}
+
+#userbase-email-signup-form label:after {
+	content: ':';
+}
+
+#userbase-email-signup-button {
+	margin-left: 125px;
+	padding: 0.3em 25px;
+	cursor: pointer;
+}
+
+#userbase-email-signup-form input {
+	background: #f6f6f6;
+	border: 2px solid #888;
+	border-radius: 2px;
+	-moz-border-radius: 2px;
+	-webkit-border-radius: 2px;
+	padding: 4px;
+}
+
+#userbase-email-signup-form input:focus {
+	background: #fff;
+}
+
+#userbase-email-signup-form abbr {
+	color: #f74d3d;
+	font-weight: bold;
+	cursor: help;
+}
+
+/* from modules/email/index.php edit info form */
+#userbase-email-edit-form {
+	font: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+	padding: 0.4em 1em;
+	margin: 0;
+	width: 520px;
+	border: 4px solid #ccc;
+	border-radius: 7px;
+	-moz-border-radius: 7px;
+	-webkit-border-radius: 7px;
+}
+
+#userbase-email-edit-form li {
+	font-size: 1.2em;
+	line-height: 1.5;
+
+	clear: both;
+	margin: 0 0 .75em;
+	padding: 0;
+}
+
+#userbase-email-edit-form fieldset {
+	border: 0;
+	padding: 0;
+	margin: 0;
+}
+
+#userbase-email-edit-form legend {
+	border: 0;
+	padding: 0;
+	margin: 0;
+	font-size: 1.8em;
+	line-height: 1.8;
+	padding-bottom: .6em;
+}
+
+#userbase-email-edit-form ul {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+}
+
+#userbase-email-edit-form label {
+	display: block;
+	float: left;
+	line-height: 1.6;
+	margin-right: 10px;
+	text-align: right;
+	width: 165px;
+	padding: 3px 0;
+}
+
+#userbase-email-edit-form label:after {
+	content: ':';
+}
+
+#userbase-email-edit-button {
+	margin-left: 180px;
+	padding: 0.3em 25px;
+	cursor: pointer;
+}
+
+#userbase-email-edit-forgotpass {
+	margin-left: 130px;
+	cursor: pointer;
+	font-size: 0.6em;
+	display: block;
+}
+
+#userbase-email-edit-form input {
+	background: #f6f6f6;
+	border: 2px solid #888;
+	border-radius: 2px;
+	-moz-border-radius: 2px;
+	-webkit-border-radius: 2px;
+	padding: 4px;
+}
+
+#userbase-email-edit-form input:focus {
+	background: #fff;
+}
+
+#userbase-email-edit-form abbr {
+	cursor: help;
+	font-style: normal;
+	border: 0;
+	color: red;
+	font-size: 1.2em;
+	font-weight: bold;
+}
+
+#userbase-email-edit-form .userbase-email-edit-section {
+	font-size: 1.5em;
+	font-weight: bold;
+	margin-top: 1em;
+}
+
+/* from modules/email/login.php */
+.userbase-errorbox {
+	background: #f7dfb9;
+	font: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+	padding: 0.4em 1em;
+	margin: 1em 0;
+	width: 445px;
+	border: 4px solid #f77;
+	border-radius: 7px;
+	-moz-border-radius: 7px;
+	-webkit-border-radius: 7px;
+	font-size: 1.2em;
+	color: #500;
+	font-weight: bold;
+}
+
+.userbase-errorbox ul {
+	margin: 0;
+	padding-left: 1em;
+}
+#userbase-loginlink {
+	font: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+	padding: 0 1em;
+	margin: 0 auto;
+	width: 450px;
+}
+
+#userbase-loginlink h2 {
+	font-weight: bold;
+	font-size: 2.5em;
+}
+
+#userbase-loginlink h3 {
+	font-weight: bold;
+	font-size: 1.5em;
+}
+
+#userbase-loginlink-form {
+	font: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+	padding: 0.4em 1em;
+	margin: 0;
+	width: 450px;
+	border: 4px solid #ccc;
+	border-radius: 7px;
+	-moz-border-radius: 7px;
+	-webkit-border-radius: 7px;
+}
+
+#userbase-loginlink-form li {
+	font-size: 1.2em;
+	line-height: 1.5;
+
+	clear: both;
+	margin: 0 0 .75em;
+	padding: 0;
+}
+
+#userbase-loginlink-form fieldset {
+	border: 0;
+	padding: 0;
+	margin: 0;
+}
+
+#userbase-loginlink-form legend {
+	border: 0;
+	padding: 0;
+	margin: 0;
+	font-size: 1.8em;
+	line-height: 1.8;
+	padding-bottom: .6em;
+}
+
+#userbase-loginlink-form ul {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+}
+
+#userbase-loginlink-form label {
+	display: block;
+	float: left;
+	line-height: 1.6;
+	margin-right: 10px;
+	text-align: right;
+	width: 60px;
+	padding: 3px 0;
+}
+
+#userbase-loginlink-form label:after {
+	content: ':';
+}
+
+#userbase-loginlink-button {
+	margin-left: 70px;
+	padding: 0.3em 25px;
+	cursor: pointer;
+}
+
+#userbase-loginlink-form input {
+	background: #f6f6f6;
+	border: 2px solid #888;
+	border-radius: 2px;
+	-moz-border-radius: 2px;
+	-webkit-border-radius: 2px;
+	padding: 4px;
+}
+
+#userbase-loginlink-form input:focus {
+	background: #fff;
 }
