--- a/themes/classic/startupapi.css
+++ b/themes/classic/startupapi.css
@@ -1,3 +1,12 @@
+.startupapi-edit-account {
+	float: right;
+	width: 400px;
+}
+
+.startupapi-error-message {
+	color: red;
+}
+
 /* from header.php */
 #userbase_body {
 	color: #666666;
