--- a/themes/classic/startupapi.css
+++ b/themes/classic/startupapi.css
@@ -1058,3 +1058,101 @@
 #startupapi-loginlink-form input:focus {
 	background: #fff;
 }
+
+/* from email verification form */
+.startupapi-email-to-verify {
+	font-weight: bold;
+}
+
+}
+#startupapi-verifyemail {
+	font: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+	padding: 0 1em;
+	margin: 0 auto;
+	width: 450px;
+}
+
+#startupapi-verifyemail h2 {
+	font-weight: bold;
+	font-size: 2.5em;
+}
+
+#startupapi-verifyemail h3 {
+	font-weight: bold;
+	font-size: 1.5em;
+}
+
+#startupapi-verifyemail-form {
+	font: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+	padding: 0.4em 1em;
+	margin: 0;
+	width: 450px;
+	border: 4px solid #ccc;
+	border-radius: 7px;
+	-moz-border-radius: 7px;
+	-webkit-border-radius: 7px;
+}
+
+#startupapi-verifyemail-form li {
+	font-size: 1.2em;
+	line-height: 1.5;
+
+	clear: both;
+	margin: 0 0 .75em;
+	padding: 0;
+}
+
+#startupapi-verifyemail-form fieldset {
+	border: 0;
+	padding: 0;
+	margin: 0;
+}
+
+#startupapi-verifyemail-form legend {
+	border: 0;
+	padding: 0;
+	margin: 0;
+	font-size: 1.2em;
+	line-height: 1.8;
+	padding-bottom: .6em;
+}
+
+#startupapi-verifyemail-form label {
+	display: block;
+	float: left;
+	line-height: 1.6;
+	margin-right: 0.7em;
+	text-align: right;
+	width: 3em;
+	height: 3em;
+	padding: 3px 0;
+}
+
+#startupapi-verifyemail-form label:after {
+	content: ':';
+}
+
+#startupapi-verifyemail-button {
+	margin-left: 0.7em;
+	padding: 0.5em 3em;
+	cursor: pointer;
+}
+
+#startupapi-verifyemail-form input {
+	background: #f6f6f6;
+	border: 2px solid #888;
+	border-radius: 2px;
+	-moz-border-radius: 2px;
+	-webkit-border-radius: 2px;
+	padding: 4px;
+}
+
+#startupapi-verifyemail-form input:focus {
+	background: #fff;
+}
+
+#startupapi-verifyemail-resend {
+	font-size: small;
+	display: block;
+	margin-left: 5em;
+}
