--- a/admin/templates/transaction_log.html.twig
+++ b/admin/templates/transaction_log.html.twig
@@ -41,49 +41,63 @@
 			}
 		</script>
 		<h3>Transaction log for account <a href="account.php?id={{ account_id }}">'{{ account_name }}'</a> (ID:{{ account_id }})</h3>
-		<form action="" method="GET">
+		<form action="" method="GET" class="form-inline">
 			<input type="hidden" name="account_id" value="{{ account_id }}" />
-			<p>From: <input type="text" name="from" id="from" value="{{ from }}"/><!--<span class="calendarButton" id="fromButton" >..</span>-->
-				To: <input type="text" name="to" id="to" value="{{ to }}" /><!--<span class="calendarButton" id="toButton" >..</span>-->
-				<input type="submit" value="Show" /></p>
+			<input class="input-small" placeholder="Start date" type="text" name="from" id="from" value="{{ from }}"/><!--<span class="calendarButton" id="fromButton" >..</span>-->
+			<input class="input-small" placeholder="End date" type="text" name="to" id="to" value="{{ to }}" /><!--<span class="calendarButton" id="toButton" >..</span>-->
+			<input class="btn" type="submit" value="Filter" />
+			<a href="?account_id={{ account_id }}" class="btn{%if from %} btn-primary{%endif%}">Reset</a>
 		</form>
 		{%if log|length == 0 %}
 			<h2>No transactions found</h2>
 		{%else%}
-			<table cellpadding="5" cellspacing="0" border="1">
-				<tr><th>Date and time</th><th>Transaction Amount</th><th>Transaction Details</th><th>Via</th></tr>
-				<tr><td colspan="4">
-						{%if log|length == perpage %}
-							<a style="float: right" href="?account_id={{ account_id }}&page={{ page + 1 }}{{ from_to }}">next &gt;&gt;&gt;</a>
-						{%else%}
-							<span style="color: silver; float: right">next &gt;&gt;&gt;</span>
-						{%endif%}
-						{%if page > 0 %}
-							<a style="float: left" href="?account_id={{ account_id }}&page={{ page - 1 }}{{ from_to }}">&lt;&lt;&lt;prev</a>
-						{%else%}
-							<span style="color: silver; float: left">&lt;&lt;&lt;prev</span>
-						{%endif%}
-						<span style="float: left; margin: 0 2em 0 1em;">Page {{ page + 1 }}</span>
-					</td></tr>
-					{%for tr in log %}
-					<tr valign="top">
-						<td>{{ tr.date_time }}</td><td align="center">{%if tr.amount < 0 %}-{%endif%}${{ "%.2f"|format(tr.amount|abs)}}</td>
-						<td>{{ tr.message }}{{ tr.details }}</td><td>{{ tr.engine_slug }}</td></tr>
-					{%endfor%}
-					<tr><td colspan="4">
-						{%if log|length == perpage %}
-							<a style="float: right" href="?account_id={{ account_id }}&page={{ page + 1 }}{{ from_to }}">next &gt;&gt;&gt;</a>
-						{%else%}
-							<span style="color: silver; float: right">next &gt;&gt;&gt;</span>
-						{%endif%}
-						{%if page > 0 %}
-							<a style="float: left" href="?account_id={{ account_id }}&page={{ page - 1 }}{{ from_to }}">&lt;&lt;&lt;prev</a>
-						{%else%}
-							<span style="color: silver; float: left">&lt;&lt;&lt;prev</span>
-						{%endif%}
-						<span style="float: left; margin: 0 2em 0 1em;">Page {{ page + 1 }}</span>
-					</td></tr>
+			<ul class="pager">
+				<li class="previous{%if page == 0 %} disabled{%endif%}">
+					{%if page > 0 %}
+						<a href="?account_id={{ account_id }}&page={{ page - 1 }}{{ from_to }}">&larr; Previous</a>
+					{%else%}
+						<a href="javascript:false">&larr; Previous</a>
+					{%endif%}
+				</li>
+				<li>Page {{ page + 1 }}</li>
+				<li class="next{%if log|length < perpage %} disabled{%endif%}">
+					{%if log|length == perpage %}
+						<a href="?account_id={{ account_id }}&page={{ page + 1 }}{{ from_to }}">Next &rarr;</a>
+					{%else%}
+						<a href="javascript:false">Next &rarr;</a>
+					{%endif%}
+				</li>
+			</ul>
+
+			<table class="table table-striped table-condensed">
+				<thead>
+					<tr><th>Date and time</th><th>Transaction Amount</th><th>Transaction Details</th><th>Via</th></tr>
+				</thead>
+
+				{%for tr in log %}
+				<tr valign="top">
+					<td>{{ tr.date_time }}</td><td align="center">{%if tr.amount < 0 %}-{%endif%}${{ "%.2f"|format(tr.amount|abs)}}</td>
+					<td>{{ tr.message }}{{ tr.details|raw }}</td><td>{{ tr.engine_slug }}</td></tr>
+				{%endfor%}
 			</table>
+
+			<ul class="pager">
+				<li class="previous{%if page == 0 %} disabled{%endif%}">
+					{%if page > 0 %}
+						<a href="?account_id={{ account_id }}&page={{ page - 1 }}{{ from_to }}">&larr; Previous</a>
+					{%else%}
+						<a href="javascript:false">&larr; Previous</a>
+					{%endif%}
+				</li>
+				<li>Page {{ page + 1 }}</li>
+				<li class="next{%if log|length < perpage %} disabled{%endif%}">
+					{%if log|length == perpage %}
+						<a href="?account_id={{ account_id }}&page={{ page + 1 }}{{ from_to }}">Next &rarr;</a>
+					{%else%}
+						<a href="javascript:false">Next &rarr;</a>
+					{%endif%}
+				</li>
+			</ul>
 		{%endif%}
 	{%endif%}
 </div>
