--- a/templates/engine/choose_engine.html.twig
+++ b/templates/engine/choose_engine.html.twig
@@ -11,8 +11,8 @@
 		<form action="{{ USERSROOTURL }}/controller/engine/choose_engine.php" method="POST">
 			<ul style="list-style-type: none">
 				{% for engine in engines %}
-				<li><input type="radio" name="engine" value="{{ engine.id }}" id="engine_radio_{{ engine.id }}"{% if engine.current %} checked{% endif %} />
-						   <label for="engine_radio_{{ engine.id }}">{{ engine.title }}</label>
+				<li><input type="radio" name="engine" value="{{ engine.slug }}" id="engine_radio_{{ engine.slug }}"{% if engine.current %} checked{% endif %} />
+						   <label for="engine_radio_{{ engine.slug }}">{{ engine.title }}</label>
 				</li>
 				{% endfor %}
 			</ul>
