--- a/templates/engine/choose_engine.html.twig
+++ b/templates/engine/choose_engine.html.twig
@@ -1,23 +1,32 @@
-{% if message %}
-{% for msg in message %}
-<h2>{{ msg }}</h2>
-{% endfor %}
-{% endif %}
-
-{% if not fatal %}
-<div>
-	Choose your payment method:
-	<div>
-		<form action="{{ USERSROOTURL }}/controller/engine/choose_engine.php" method="POST">
-			<ul style="list-style-type: none">
-				{% for engine in engines %}
-				<li><input type="radio" name="engine" value="{{ engine.slug }}" id="engine_radio_{{ engine.slug }}"{% if engine.current %} checked{% endif %} />
-						   <label for="engine_radio_{{ engine.slug }}">{{ engine.title }}</label>
-				</li>
+<div class="container-fluid" style="margin-top: 1em">
+	<div class="row-fluid">
+		<div class="span12">
+			{% if message %}
+				{% for msg in message %}
+					<div class="alert">{{ msg }}</div>
 				{% endfor %}
-			</ul>
-			<input type="submit" value="Ok" />
-		</form>
+			{% endif %}
+
+			{% if not fatal %}
+			<h2>Choose your payment method</h2>
+			<form class="form" action="{{ USERSROOTURL }}/controller/engine/choose_engine.php" method="POST">
+				<div class="control-group">
+					<div class="controls">
+						{% for engine in engines %}
+							<label class="radio">
+								<input type="radio" name="engine" value="{{ engine.slug }}" id="engine_radio_{{ engine.slug }}"{% if engine.current %} checked{% endif %} />
+							{{ engine.title }}
+							</label>
+						{% endfor %}
+					</div>
+				</div>
+				<div class="control-group">
+					<div class="controls">
+						<input class="btn" type="submit" value="Save Changes" />
+					</div>
+				</div>
+			</form>
+			{% endif %}
+		</div>
 	</div>
 </div>
-{% endif %}
