Converted index page into a wizard that will guide a user through installation and then send to appropriate page.

--- a/themes/classic/startupapi.css
+++ b/themes/classic/startupapi.css
@@ -1274,3 +1274,12 @@
 .startupapi-header-strip {
 	padding: 0.3em;
 }
+
+/* Installation wizard */
+.startupapi-dep-title {
+	font-weight: bold;
+}
+
+.startupapi-file-path {
+	font-family: 'courier';
+}
